test_suite/tests/ui/common/schemars08.stderr
error: To derive JsonSchema, the feature `schemars1` of the crate `nutype` needs to be enabled.
 --> tests/ui/common/schemars1.rs:3:17
  |
3 | #[nutype(derive(JsonSchema))]
  |                 ^^^^^^^^^^
